[package]
name = "yrs-axum"
version = "0.8.2"
edition = "2021"
description = "Yrs synchronization protocol using Axum web sockets"
license = "MIT"
authors = ["Vagmi Mudumbai <vagmi.mudumbai@gmail.com>"]
keywords = ["crdt", "yrs", "axum"]
homepage = "https://github.com/vagmi/yrs-axum/"
repository = "https://github.com/vagmi/yrs-axum/"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yrs = "0.18.2"
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1.36", features = ["rt", "net", "sync", "macros"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
axum = {version="0.8.1", features=["ws"]}
bytes = "1.6"

[dev-dependencies]
tokio-tungstenite = "0.21"
tokio = { version = "1", features = ["full"] }
tower-http = {version="0.6.2", features=["fs"]}
